# hcaptcha-reverse

./: .gitignore  .txt  README.md  new.wat  package-lock.json  readme.md  x.txt
1.40.7/: exec.html  hsw.js
archive/hsw/: 1_40_0_hsw_bind.js  1_40_13_hsw_bind.js  1_40_30_hsw_bind.js  1_40_34_hsw_bind.js
archive/wasm/: build.wasm
assets/: decrypt.py  discrod_fp.json  dump_curr.js  old_n.json  rqdata.json  x.py
assets/archives/: hsw.0012bcc6.wat  hsw.bf600bd.js
assets/quick/: hsl.js  hsl.py  stamp.py  (+1 more)
debugger/: hsw.js  index.html  jwt.json
deobfuscator/: desugar.wat  dolphin.json  dom.json  fingerprint_events.js  hsj.js  hsw.js  lol.json  main.wasm  main.wat  memory_dumper.js  new_hsw.js  out.txt  parse_arr_bytes.py  test.c  test.h
experiment/: 108.c  b64.py  brute.py  deob.js  enc.js  encrypt.go  hsw_bind.js  main.js  main.py  old_hsw.wasm  rand.go  x.py  xor.py
fp_build/: fp.json  fp_build.rar  go.mod  go.sum  jwt.go  main.go  rand.go  stamp.go  xxhash.go
sandbox/: 1_39_hsw_bind.js  1_40_14_hsw_bind.js  1_40_15_hsw_bind.js  1_40_16_hsw_bind.js  1_40_21_hsw_bind.js  1_40_31_hsw_bind.js  1_40_32_hsw_bind.js  1_40_hsw_bind.js  hsw_bind.js  loop.bash  main.js  package-lock.json  package.json  stable_hsw_bind.js  start.bash  start.bat  test.py
scripts/: custom_hsw.js  deob.js  exec.html  spt.py  stress.py  xtea.py
src/: main.py
test/: .html  decr.go
tmp/wasm_json_encode/: Cargo.toml  enc.wat  index.html
tmp/wasm_json_encode/src/: lib.rs
tooling/: dumper.js
versions/: dumper.js  exec.html  fingerprint_dumper.js  key_dumper.js  n_dumper.js  vm.js
(+71 files in other folders)
