[package]
name = "wasm_json_encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = { version = "1.0", features = ["std"] }
wasm-bindgen = "0.2"


[lib]
crate-type = ["cdylib", "rlib"]